@@ -40,6 +40,8 @@ LanguageTool Change Log
 
 -API:
     -LanguageIdentifierTools has been removed. Use LanguageIdentifier instead.
+    -Removed (Default)ResourceDataBroker.setResourceDir() and setRulesDir()
+     as these can be set with the constructor
 
 -Embedded server:
     -XML escaping has been fixed, this could cause invalid XML documents
